--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/bigEyesAndSmallEyes/learnWebpack/issues"
   },
-  "homepage": "https://github.com/bigEyesAndSmallEyes/learnWebpack#readme"
+  "homepage": "https://github.com/bigEyesAndSmallEyes/learnWebpack#readme",
+  "devDependencies": {
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
+  }
 }
